# ChrisKeyboards

./: .aliases  .gitignore  CMakeLists.txt  README.md  compile.sh  sdkconfig.defaults
3DModel/: split1c.stl  split1m.stl  v0.2.blend  v0.2.stl  v0.2c.stl  v0.2m.stl  v0.blend  v0.blend1
doc/: PCB_Wires.md  Wires.md  matrix.md  usb.md
doc/blocking/: GhostBlocking.kra  README.md
doc/connector/: conn_kbd.jpg.kra
doc/dell2merde/: doc.md
main/: CMakeLists.txt  detect_main.cc  detect_main2.cc  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.h  hid_device_le_prf.c  main.cc  reversed_main.cc  test.ino  tusb_hid_example_main.c  tusb_hid_example_main.cc
pcb/mainPCB/: fp-info-cache  fp-lib-table  mainPCB.kicad_pcb  mainPCB.kicad_prl  mainPCB.kicad_pro  mainPCB.kicad_sch
pcb/mainPCB/ChrisLib.pretty/: FPC_30_Dell_0.8mm.kicad_mod  FPC_30_Dell_0.8mm_no0.kicad_mod  FPC_40_Dell_0.8mm.kicad_mod  Untitled.kicad_mod  test.kicad_mod
